--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": ""
+	  "start": "nodemon --exec ts-node src/index.ts",
   },
   "keywords": [],
   "author": "Milenko Markovic",
